--- a/Gradient Decent.ipynb
+++ b/Gradient Decent.ipynb
@@ -2,8 +2,221 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "be550afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b8f540cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>48.955889</td>\n",
+       "      <td>60.723602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>44.687196</td>\n",
+       "      <td>82.892504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60.297327</td>\n",
+       "      <td>97.379897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45.618644</td>\n",
+       "      <td>48.847153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>38.816818</td>\n",
+       "      <td>56.877213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x          y\n",
+       "0  48.955889  60.723602\n",
+       "1  44.687196  82.892504\n",
+       "2  60.297327  97.379897\n",
+       "3  45.618644  48.847153\n",
+       "4  38.816818  56.877213"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"home data.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "84bbe57b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(99, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dd5b12b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=df['x']\n",
+    "y= df['y']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9d3625",
+   "metadata": {},
+   "source": [
+    "# Gradient descent in machine learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "58fe6b84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is m: 1.4796491688881985\n",
+      "This is c: 0.10148121497503648\n"
+     ]
+    }
+   ],
+   "source": [
+    "#first step\n",
+    "\n",
+    "m=0\n",
+    "c=0\n",
+    "Learning_rate=0.0001\n",
+    "n = int(len(x))\n",
+    "\n",
+    "iterations =1000\n",
+    "\n",
+    "#2nd step\n",
+    "for i in range(iterations):\n",
+    "    y_prediction =m*x+c\n",
+    "    dervatives_m= (-2/n) * sum(x*(y-y_prediction))\n",
+    "    dervatives_c= (-2/n) * sum(y-y_prediction)\n",
+    "    \n",
+    "    #final work\n",
+    "    \n",
+    "    m = m- Learning_rate * dervatives_m\n",
+    "    c = c- Learning_rate * dervatives_c\n",
+    "\n",
+    "print('This is m:',m)\n",
+    "print('This is c:',c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4034169a",
+   "metadata": {},
+   "source": [
+    "# Make Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "20a8eae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any value of x:38\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "28.227103979731698"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=float(input(\"Enter any value of x:\"))\n",
+    "\n",
+    "#y=mx+c\n",
+    "\n",
+    "b=0.7424335285442664* a +0.014629895049575754\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6a6aa543",
+   "id": "d6daca9d",
    "metadata": {},
    "outputs": [],
    "source": []
